# viewerator

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  latest.sh
src/: lib.rs  log_display.rs  main.rs  screen.rs  webdata.rs
test_data/: 2bcu1cvp.json  4bcu.json
tests/: cucumber.rs  parsing.rs
tests/data/: 1cvp_00.00.00.json  2bcu.json  2bcu1.json  4bcu1.json
tests/features/: simple_example.feature
tests/simple_example/: mod.rs
